# polars-bio-workshop

./: .gitignore  README.md  pyproject.toml
data/: test.gff
data/chainRn4/: .part-00000-856e9d00-ab2a-4222-a97b-7c8ff1d032b0-c000.snappy.parquet.crc  .part-00001-856e9d00-ab2a-4222-a97b-7c8ff1d032b0-c000.snappy.parquet.crc
data/ex-rna/: .part-00000-e6482b28-62b0-4ad8-b9f3-799d7fe49064-c000.snappy.parquet.crc  .part-00001-e6482b28-62b0-4ad8-b9f3-799d7fe49064-c000.snappy.parquet.crc
notebook/: bioframe_tutorial.ipynb  gff_operations_demo.ipynb  operons_demo.ipynb  tutorial.ipynb
notebook/src/: overlap.py  overlap_coordinates_only.py  overlap_low_memory.py
